<resources>
    <string name="app_name">MyRestaurant</string>
    <string name="rest_name">EL ITALIANO</string>
    <string name="app_menu">Explorar el menú</string>
    <string name="app_pedido">Realizar un Pedido</string>
    <string name="app_reserva">Reservar una Mesa</string>
    <string name="app_info">Conocer más Sobre el Sitio</string>
    <string name="app_calificar">Calificarnos</string>
    <string name="app_Bienvenida">Bienvenid@.¿Que desea hacer?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu">¿Que Deseas Explorar?</string>
    <string name="sede">Sobre Nosotros</string>
    <string name="direccion">Direccion: Calle 34F # 91 - 64</string>
    <string name="telefono">Telefono: 312 555 8997</string>
    <string name="correo">Correo: elitaliano@gmail.com</string>
    <string name="mapa">Conoce todas nuestras sedes</string>

    //NOMBRE
    <string name="Entrada1">Bruschettas</string>>
    <string name="Entrada2">Focaccia</string>>
    <string name="Entrada3">Arancini</string>>

    <string name="Plato1">Pizza</string>>
    <string name="Plato2">Spaghetti</string>>
    <string name="Plato3">Lasagna</string>>

    <string name="Bebida1">Cafe</string>>
    <string name="Bebida2">Vino</string>>
    <string name="Bebida3">Limonada</string>>

    <string name="Postre1">Tiramisu</string>>
    <string name="Postre2">Cheescake</string>>
    <string name="Postre3">Focaccia de Nutella</string>>

    //INGREDIENTE
    <string name="ING_Plato1">Pepperoni, Vegetariana, Siciliana, Hawaiana, Daivola, Saporita</string>
    >
    <string name="ING_Plato2">Pomodoro, Alfredo, Pesto, Amatriciana, Carbonara, Della Casa, Frutti Di Mare</string>
    >
    <string name="ING_Plato3">Bolognesa, Pollo e Funghi, Mixta</string>>

    <string name="ING_Entrada1">Tajadas de pan tostado recien horneado con tomate picado y queso de bufala</string>
    >
    <string name="ING_Entrada2">Pan plano con aceite de ajo y oregano</string>>
    <string name="ING_Entrada3">Bolas y/o conos de arroz relleno</string>>

    <string name="ING_Bebida1">Cafe a Eleccion (Suave, fuerte, extrafuerte) en leche o en agua</string>
    >
    <string name="ING_Bebida2">Vino Rosado, Blanco, Tinto</string>>
    <string name="ING_Bebida3">Coco, Cereza, Mango, Lima</string>>

    <string name="ING_Postre1">Pastel de queso hecho a base de ricota, queso quark, azucar</string>>
    <string name="ING_Postre2">Postre con una base de bizcochos bañados en café y cubiertos por una crema de huevos, queso mascarpone y azucar</string>
    >
    <string name="ING_Postre3">Una base de focaccia crujiente cubierta con Nutella derretida y un toque de azúcar glas</string>
    >

    //PRECIO
    <string name="PRECIO_Plato1">$ 28.000</string>>
    <string name="PRECIO_Plato2">$ 35.000</string>>
    <string name="PRECIO_Plato3">$ 30.000</string>>

    <string name="PRECIO_Entrada1">$ 18.000</string>>
    <string name="PRECIO_Entrada2">$ 12.000</string>>
    <string name="PRECIO_Entrada3">$ 18.000</string>>

    <string name="PRECIO_Bebida1">$ 5.000</string>>
    <string name="PRECIO_Bebida2">$ 20.000</string>>
    <string name="PRECIO_Bebida3">$ 8.000</string>>

    <string name="PRECIO_Postre1">$ 12.000</string>>
    <string name="PRECIO_Postre2">$ 12.000</string>>
    <string name="PRECIO_Postre3">$ 15.000</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>>


</resources>