<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbdbdb"
    tools:context=".SedeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-16dp">

        <Space
            android:layout_width="51dp"
            android:layout_height="53dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:fontFamily="serif"
            android:gravity="center_vertical"
            android:text="@string/sede"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#141212"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:backgroundTint="#E64624"
            android:drawableLeft="@drawable/menu"
            android:onClick="abrirSedes"
            android:text="@string/mapa"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:fontFamily="serif"
            android:text="@string/direccion"
            android:textColor="#141212"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/telefono"
            android:textColor="#141212"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/correo"
            android:textColor="#141212"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>